# Simple-Crosshair

./: .gitignore  Audio.cpp  Audio.h  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  LICENSE  OverlayWindow.cpp  OverlayWindow.h  README.md  README_ASSETS.txt  UI.cpp  UI.h  generate_sounds.py  main.cpp
